--- a/Participation/Participation.html
+++ b/Participation/Participation.html
@@ -2,11 +2,15 @@
 <html lang="en">
     <head>
     <meta charset="utf-8">
-        <title>André Clause</title>
+        <title>Definition List</title>
     </head>
 
     <body>
-        André Clause Data Analytics and accounting student / Part time consultant I am a student pursuing the legal side of- 
-        the buisness world I am excited to learn about web development! Things I like to do lacrosse, video games, and bodybuilding 
+        <ol>
+            <li>&trade; Trademark</li>
+            <li>&spades; Spade</li>
+            <li>&clubs; Club</li>
+
+        </ol>
     </body>
 </html>
