--- a/Participation/Participation.html
+++ b/Participation/Participation.html
@@ -7,7 +7,7 @@
 
     <body>
         <ol>
-            <li>&trade; Trademark</li>
+            <li>&copy; Copyright</li>
             <li>&spades; Spade</li>
             <li>&clubs; Club</li>
 
