--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -2,7 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <h1>Contact</h1>
+        <title>Contact</title>
     </head>
-
+    <body>
+        <h1>Contact</h1>
+        <h2>Andre Clause 900 S Crouse Ave, Syracuse, NY 13244</h2>
+        <a href="www.linkedin.com/in/andreclause1" target=" _blank">linkedin</a>
+        <a href="mailto:acclause@syr.edu">Andre Clause Email</a>
+    </body>
 </html>
