--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -7,7 +7,8 @@
     <body>
         <h1>Contact</h1>
         <h2>Andre Clause 900 S Crouse Ave, Syracuse, NY 13244</h2>
-        <a href="www.linkedin.com/in/andreclause1" target=" _blank">linkedin</a>
+        <a href="http://www.linkedin.com/in/andreclause1" target=" _blank">linkedin</a>
         <a href="mailto:acclause@syr.edu">Andre Clause Email</a>
+        <a href="../images/LinkedIn-Logos/LI-In-Bug.png" alt="LinkedIN Logo"></a>
     </body>
 </html>
