--- a/lab 05/contact.html
+++ b/lab 05/contact.html
@@ -9,6 +9,6 @@
         <h2>Andre Clause 900 S Crouse Ave, Syracuse, NY 13244</h2>
         <a href="http://www.linkedin.com/in/andreclause1" target=" _blank">linkedin</a>
         <a href="mailto:acclause@syr.edu">Andre Clause Email</a>
-        <img src="../images/i.png" alt="LinkedIn logo">
+        <img src="../images/image 1.png" alt="LinkedIn logo">
     </body>
 </html>
