--- a/week8/finger-lakes (1).html
+++ b/week8/finger-lakes (1).html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>Travel Central New York</title>
     <style>
+        div {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: flex-start;
+        }
 
     </style>
 </head>
@@ -33,26 +38,31 @@
             <h2>Top Attractions</h2>
             <div class="attractions-section">
             <article class="article1">
+                <img src="../images/pexels-adirondacks.jpg" alt="Adirondack">
                 <h3>Adirondack Mountains</h3>
                 <p>Perfect for nature lovers, the Adirondacks offer breathtaking views, hiking, and camping opportunities. Don't miss a chance to explore these magnificent mountains.</p>
             </article>
 
             <article class="article2">
+                <img src="../images/pexels-syracuse.jpg" alt="syracuse">
                 <h3>Syracuse</h3>
                 <p>A vibrant city with a rich history, Syracuse is home to museums, parks, and the renowned Syracuse University. Be sure to visit the city's downtown for great food and entertainment.</p>
             </article>
 
             <article class="article3">
+                <img src="../images/pexels-niagara.jpg" alt="Niagara Falls">
                 <h3>Niagara Falls</h3>
                 <p>One of the most famous natural wonders in the world, Niagara Falls is a must-see. Whether you view it from a boat tour or one of the observation decks, the falls are a breathtaking sight.</p>
             </article>
 
             <article class="article4">
+                <img src="../images/pexels-seneca-lake.jpg" alt="Seneca Lake">
                 <h3>Seneca Lake</h3>
                 <p>The banks of the blue water of Seneca Lake create a relaxing experience for swimmers and picnickers.</p>
             </article>
 
             <article class="article5">
+                <img src="../images/pexels-upstate.jpg" alt="Ithaca">
                 <h3>Ithaca</h3>
                 <p>Ithaca is famous for its many waterfalls, more than 100 within 10 miles of downtown. If you put them all together, it's a waterfall 7,342 feet tall. That's 1.39 miles of falling water!</p>
             </article>
