--- a/Week14/lab14.html
+++ b/Week14/lab14.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>My favicon</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <h1>My favicon</h1>
 </body>
 </body>
 </html>
