--- a/FinalProject/ThirdPage.html
+++ b/FinalProject/ThirdPage.html
@@ -90,7 +90,10 @@
         
     </header>
 
-
+    <div class="content">
+        <h1>Welcome to the Page</h1>
+        <p>This is the main content of the page.</p>
+    </div>
     
     <footer class="footer">
         <p>&copy; 2024 TIMELESS. All rights reserved.</p>
