--- a/FinalProject/FrontPage.html
+++ b/FinalProject/FrontPage.html
@@ -16,7 +16,7 @@
 
         .header {
             width: 100%;
-            background-color: purple;
+            background-color: #933ff5;
             color: white;
             padding: 15px 20px;
             text-align: center;
@@ -94,7 +94,7 @@
         <h1>Welcome to the Page</h1>
         <p>This is the main content of the page.</p>
     </div>
-    
+
     <footer class="footer">
         <p>&copy; 2024 TIMELESS. All rights reserved.</p>
     </footer>
