--- a/FinalProject/ThirdPage.html
+++ b/FinalProject/ThirdPage.html
@@ -16,7 +16,7 @@
 
         .header {
             width: 100%;
-            background-color: purple;
+            background-color: #933ff5;
             color: white;
             padding: 15px 20px;
             text-align: center;
