--- a/FinalProject/FrontPage.html
+++ b/FinalProject/FrontPage.html
@@ -36,7 +36,7 @@
             text-decoration: none;
             cursor: default;
             font-family:sans-serif;
-            font-size:x-large;
+            font-size:45px;
         }
         .header h2 {
             margin: 0;
