--- a/FinalProject/SecondPage.html
+++ b/FinalProject/SecondPage.html
@@ -36,7 +36,7 @@
             text-decoration: none;
             cursor: default;
             font-family:sans-serif;
-            font-size:x-large;
+            font-size:25px;
         }
         .header h2 {
             margin: 0;
@@ -45,7 +45,7 @@
             text-decoration: none;
             cursor: default;
             font-family:sans-serif;
-            font-size:xx-large;
+            font-size:45px;
         }
 
         .header h3 {
@@ -55,7 +55,7 @@
             text-decoration: none;
             cursor: default;
             font-family:sans-serif;
-            font-size:x-large;
+            font-size:25px;
         }
         .content {
             flex-grow: 1;
