--- a/FinalProject/ThirdPage.html
+++ b/FinalProject/ThirdPage.html
@@ -91,8 +91,12 @@
     </header>
 
     <div class="content">
-        <h1>Welcome to the Page</h1>
-        <p>This is the main content of the page.</p>
+        <h1>Contacts</h1>
+        <p>Owner - André Clause</p>
+        <p>Phone Number</p>
+        <P>Email</P>
+        
+
     </div>
     
     <footer class="footer">
