--- a/FinalProject/ThirdPage.html
+++ b/FinalProject/ThirdPage.html
@@ -58,8 +58,16 @@
             font-size:25px;
         }
         .content {
+            display: flex;
+            justify-content: space-between;
+            flex-direction: column;
+            flex-wrap: wrap;
             flex-grow: 1;
             padding: 20px;
+            text-align: center;
+        }
+        .Contacts {
+            display: flex;
             text-align: center;
         }
 
@@ -91,12 +99,15 @@
             <h3><a href="https://andreclause.github.io/ist263/FinalProject/ThirdPage.html">Contact</a></h3>
         
     </header>
-
+    <div class="Contacts">
+        <h1>Contacts</h1>
+    </div>
     <div class="content">
         <h1>Contacts</h1>
-        <p>Owner - André Clause</p>
-        <p>Phone Number</p>
-        <P>Email</P>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5831.247717191089!2d-76.138055!3d43.049344999999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f3a5e0952113%3A0xa671279445418b15!2s820-900%20S%20Crouse%20Ave%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1734323963828!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        <p>Owner - André Clause</p>
+        <p>Phone Number - (716)-704-XXXX</p>
+        <P>Email - acclause@syr.edu</P>
+        <p>Mailing - 900 S Crouse Ave, Syracuse, NY 13244</p>
 
 
     </div>
