--- a/week2/lab02.html
+++ b/week2/lab02.html
@@ -15,8 +15,7 @@
             <li>Bodybuild</li>
             <li>Increase the wealth of the shareholders</li>
             <li>Play new sports</li>
-            <a href="www.linkedin.com/in/andreclause1">
-            <li>Code</a li>
+            <a href="www.linkedin.com/in/andreclause1"><li>Code</a li>
             </a>
         </ul>
     <hr>
