--- a/week2/lab02.html
+++ b/week2/lab02.html
@@ -15,7 +15,7 @@
             <li>Bodybuild</li>
             <li>Increase the wealth of the shareholders</li>
             <li>Play new sports</li>
-            <a href="www.linkedin.com/"><li>Code</a li>
+            <li><a href="www.linkedin.com/"><li>Code</a> </li>
             </a>
         </ul>
     <hr>
