--- a/lab03/participation.html
+++ b/lab03/participation.html
@@ -7,7 +7,11 @@
     
     <body>
             <h1>Image Paths</h1>
-            <img src="../images/10839348-uhd_4096_2160_30fps.mp4" alt="">
+            <video src="../images/10839348-uhd_4096_2160_30fps.mp4" alt="">
+                <video width="320" height="240" controls>
+                    <source src="../images/10839348-uhd_4096_2160_30fps.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
     </body>
 
 </html>
