--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -6,10 +6,10 @@
     </head>
     <body>
         <h1>Contact</h1>
-        <h2>Andre Clause 900 S Crouse Ave, Syracuse, NY 13244</h2>
+        <h2>Andre Clause 401 Skytop Rd, Syracuse, NY 13210</h2>
         <a href="http://www.linkedin.com/in/andreclause1" target=" _blank">linkedin</a>
         <a href="mailto:acclause@syr.edu">Andre Clause Email</a>
         <img src="../images/LinkedIn-Logos/LI-In-Bug.png" alt="LinkedIn logo">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4263.340345667415!2d-76.14062455853846!3d43.04934889139519!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f3a5e0952113%3A0xa671279445418b15!2s820-900%20S%20Crouse%20Ave%2C%20Syracuse%2C%20NY%2013210!5e1!3m2!1sen!2sus!4v1726182941999!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2917.1787178667405!2d-76.1189706!3d43.016625299999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f49cdd656453%3A0x70e39edb2087159e!2sGoldstein%20Student%20Center!5e0!3m2!1sen!2sus!4v1738279984975!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </body>
 </html>
