--- a/week7/participation.html
+++ b/week7/participation.html
@@ -1,45 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  background-color: maroon;
   transition: 0.3s;
   width: 40%;
 }
 
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  background-color: blueviolet;
-  
 }
 
 .container {
-  padding: 2px 16px;
-  background-color: aqua;
+  padding: 16px;
 }
-
-.button {
-    background-color: chocolate;
-}
-
-.button:hover {
-    background-color: rgb(100,100,0);
-}
-
 </style>
 </head>
 <body>
 
-<h2> HTML Card</h2>
+<h2>HTML Card</h2>
 
 <div class="card">
   <img src="https://upload.wikimedia.org/wikipedia/en/d/d3/Otto_the_Orange_logo.svg" alt="Avatar" style="width:100%">
   <div class="container">
-    
-    <h4><b>Otto the Orange</b></h4> 
+    <h3><b>Otto the Orange</b></h3> 
     <p>Syracuse University Mascot</p>
     <button class="button">Meet Otto</button>
   </div>
