--- a/week7/participation.html
+++ b/week7/participation.html
@@ -2,19 +2,33 @@
 <html>
 <head>
 <style>
+h3 {
+  color:blue;
+}
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(0,150,0,0.2);
   transition: 0.3s;
   width: 40%;
 }
-
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+.button {
+  color:coral;
+  background-color: black;
 }
-
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(150, 150, 50, 0.2);
+  background-color: bisque;
+}
+.card {
+  background-color: brown;
+}
 .container {
   padding: 16px;
+  background-color: blueviolet;
 }
+.button:hover {
+  background-color: aqua;
+}
+
 </style>
 </head>
 <body>
