--- a/week8/participation.html
+++ b/week8/participation.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <title>Travel Central New York</title>
     <style>
-        
+        .attractions-section {
+            display: flex;
+            flex-flow: row wrap;
+        }
 
     </style>
 </head>
@@ -32,30 +35,37 @@
 
         <section id="top-attractions">
             <h2>Top Attractions</h2>
-            <div class="attractions-section">
+            <div class="attractions-section" >
             <article class="article1">
                 <h3>Adirondack Mountains</h3>
                 <p>Perfect for nature lovers, the Adirondacks offer breathtaking views, hiking, and camping opportunities. Don't miss a chance to explore these magnificent mountains.</p>
+                <img src="https://raw.githubusercontent.com/JDScharf/ist263/refs/heads/main/images/travel-logo.png" alt="travel logo">
             </article>
 
             <article class="article2">
                 <h3>Syracuse</h3>
                 <p>A vibrant city with a rich history, Syracuse is home to museums, parks, and the renowned Syracuse University. Be sure to visit the city's downtown for great food and entertainment.</p>
+
+                <img src="https://raw.githubusercontent.com/JDScharf/ist263/refs/heads/main/images/pexels-adirondacks.jpg" alt="central new york image">
             </article>
 
             <article class="article3">
                 <h3>Niagara Falls</h3>
                 <p>One of the most famous natural wonders in the world, Niagara Falls is a must-see. Whether you view it from a boat tour or one of the observation decks, the falls are a breathtaking sight.</p>
+                <img src="https://raw.githubusercontent.com/JDScharf/ist263/refs/heads/main/images/pexels-niagara.jpg" alt="waterfall at niagara falls">
             </article>
 
             <article class="article4">
                 <h3>Seneca Lake</h3>
                 <p>The banks of the blue water of Seneca Lake create a relaxing experience for swimmers and picnickers.</p>
+                <img src="https://raw.githubusercontent.com/JDScharf/ist263/refs/heads/main/images/pexels-seneca-lake.jpg" alt="seneca lakehouse">
             </article>
 
             <article class="article5">
                 <h3>Ithaca</h3>
                 <p>Ithaca is famous for its many waterfalls, more than 100 within 10 miles of downtown. If you put them all together, it's a waterfall 7,342 feet tall. That's 1.39 miles of falling water!</p>
+                <img src="https://raw.githubusercontent.com/JDScharf/ist263/refs/heads/main/images/pexels-syracuse.jpg" alt="downtown syracuse public art">
+
             </article>
         </div>
         </section>
@@ -70,11 +80,7 @@
         </section>
     </main>
 
-    <img src="https://raw.githubusercontent.com/JDScharf/ist263/refs/heads/main/images/travel-logo.png" alt="travel logo">
-    <img src="https://raw.githubusercontent.com/JDScharf/ist263/refs/heads/main/images/pexels-adirondacks.jpg" alt="central new york image">
-    <img src="https://raw.githubusercontent.com/JDScharf/ist263/refs/heads/main/images/pexels-niagara.jpg" alt="waterfall at niagara falls">
-    <img src="https://raw.githubusercontent.com/JDScharf/ist263/refs/heads/main/images/pexels-seneca-lake.jpg" alt="seneca lakehouse">
-    <img src="https://raw.githubusercontent.com/JDScharf/ist263/refs/heads/main/images/pexels-syracuse.jpg" alt="downtown syracuse public art">
+
     <img src="https://raw.githubusercontent.com/JDScharf/ist263/refs/heads/main/images/pexels-upstate.jpg" alt="trees in fall">
 
     <footer>
