--- a/week8/participation.html
+++ b/week8/participation.html
@@ -6,7 +6,8 @@
     <style>
         .attractions-section {
             display: flex;
-            flex-flow: row wrap;
+            flex-flow: row ;
+            justify-content: space-between;
         }
 
     </style>
