--- a/Week10/Participation.html
+++ b/Week10/Participation.html
@@ -1,46 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Unit 10 Notes Responsive Design</title>
-        <style>
-            body {font-family: Arial, Helvetica, sans-serif;}
-            .row1 { 
-                padding: 80px;
-                margin-top: 40px;}
-            .row1 div {
-                padding: 42px;
-            }
-        </style>
-        <meta name="viewport" content="width=device-width, initial-
-        scale=1.0">
-        
-    </head>
-    <body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Responsive Page</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      color: white;
+      font-size: 2rem;
+      transition: background-color 0.3s ease;
+    }
 
-        <h1>Flexbox</h1>
+    @media (max-width: 800px) {
+      body {
+        background-color: #4caf50; /* Green background */
+        content: "I'm small";
+      }
 
-        <!-- large width banner image -->
-        <img src="https://laferger.github.io/ist263/images/forever_orange.jpg" alt="large campus banner" class="banner">
+      .message::before {
+        content: "I'm small";
+      }
+    }
+    @media (min-width: 801px) {
+      body {
+        background-color: #ff0000; 
+      }
 
-        <!-- smaller width banner image -->
-        <img src="https://laferger.github.io/ist263/images/forever_orange_small.jpg" alt="small campus banner" class="bannersmall">
-        
-        <!-- this row is coming from https://www.syracuse.edu/about/ -->
-        <div class="row1">
-            <div class="box1">
-                <img src="https://laferger.github.io/ist263/images/eighty-percent-numeral-800x533.png" alt="80 percent"><br>
-                <p>80% of Syracuse University students received some form of financial support totaling more than $414 million (2019-2020 data)</p>
-            </div>
-            <div class="box2">
-                <img src="https://laferger.github.io/ist263/images/eighty-seven-percent-800x533.png" alt="80 percent">
-                <p>87% placement outcome (Graduates in full-and part-time positions, military service, volunteer or service programs, and graduate school.)</p>
-            </div>
-            <div class="box3">
-                <img src="https://laferger.github.io/ist263/images/ninety-percent-800x533.png" alt="80 percent">
-                <p>Positions related to Career Goals</p>
-            </div>
-        </div>
-
-    </body>
+      .message::before {
+        content: "I'm large";
+      }
+    }
+  </style>
+</head>
+<body>
+  <div class="message"></div>
+</body>
 </html>
