--- a/Week10/Participation.html
+++ b/Week10/Participation.html
@@ -3,23 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Responsive Page</title>
+  <title>Week 10 Participation</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      margin: 0;
-      color: white;
-      font-size: 2rem;
-      transition: background-color 0.3s ease;
     }
 
     @media (max-width: 800px) {
       body {
-        background-color: #4caf50; /* Green background */
+        background-color: blue; 
         content: "I'm small";
       }
 
