--- a/week11/paticipation.html
+++ b/week11/paticipation.html
@@ -5,6 +5,6 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <var></var>
+    <button type="button" onclick="alert('My first JavaScript program!')">Click Me!</button>
 </body>
 </html>
