--- a/week11/lab11.html
+++ b/week11/lab11.html
@@ -13,23 +13,29 @@
        function ShuffleShells() {
         document.getElementById("first").style.order = Math.floor((Math.random()*3)+2);
        }
+       function ShuffleShells() {
+            let shellOrder = [1,2,3].sort(function() {
+                return Math.random() - 0.5;
+            })
+            console.log("The winning shell is: " + shellOrder[0])
+            document.getElementById("first").style.order = shellOrder[0];
+            document.getElementById("second").style.order = shellOrder[1];
+            document.getElementById("third").style.order = shellOrder[2];
+       }
     </script>
     <style>
         .container{
             display: flex;
         }
-        #first {order: 1;}
-        #second{order: 2;}
-        #third{order: 3;}
         
     </style>
 </head>
 <body onload="ShuffleShells();">
     <h1>Choose a Walnut</h1>
     <div class="container">
-        <img src="../images/walnut.png" alt="first" class="first" onclick="WinnerMessage()">
-        <img src="../images/walnut.png" alt="second" class="second" onclick="TryAgain()">
-        <img src="../images/walnut.png" alt="third" class="third" onclick="TryAgain()">
+        <img src="../images/walnut.png" alt="first" id="first"  onclick="WinnerMessage()">
+        <img src="../images/walnut.png" alt="second" id="second" onclick="TryAgain()">
+        <img src="../images/walnut.png" alt="third" id="third" onclick="TryAgain()">
     </div>
     <div id="messages"></div>
 </body>
