--- a/week12/lab12.html
+++ b/week12/lab12.html
@@ -33,12 +33,13 @@
             margin: auto;
             font-family: Arial, sans-serif;
         }
-
         #bigimages img {
-            width: 300px;
-            float: left;
-            margin-right: 20px;
-        }
+            max-width: 100%;
+            height: auto;
+            float: none;
+            display: block;
+            margin: 0 auto 20px auto;
+}
 
         #planetinfo {
             overflow: hidden;
@@ -46,26 +47,56 @@
         }
 
         #planetinfo > div {
-            float: left;
-            width: calc(100% - 320px); 
-        }
-        #thumbnails {
-            clear: both;
-            margin-top: 20px;
+            width: 100%;
+            float: none;
             text-align: center;
         }
+        #thumbnails {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
 
         #thumbnails img {
-            width: 80px;
-            height: 80px;
+            flex: 1 1 80px;
+            max-width: 100px;
+            height: auto;
             margin: 5px;
-            cursor: pointer;
-            border: 2px solid transparent;
-            transition: border 0.3s;
         }
 
         #thumbnails img:hover {
             border: 2px solid #666;
+        }
+
+        @media screen and (max-width: 768px) {
+            #planetinfo {
+                text-align: center;
+            }
+
+            #planetinfo > div {
+                padding: 0 10px;
+            }
+
+            #thumbnails img {
+                flex: 1 1 22%;
+                max-width: 80px;
+            }
+        }
+
+        @media screen and (max-width: 480px) {
+            h1, h2 {
+                font-size: 1.5rem;
+            }
+
+            #thumbnails img {
+                flex: 1 1 30%;
+                max-width: 70px;
+            }
+
+            #planetinfo p {
+                font-size: 0.95rem;
+            }
         }
 
      </style>
