--- a/week12/lab12.html
+++ b/week12/lab12.html
@@ -34,12 +34,10 @@
             font-family: Arial, sans-serif;
         }
         #bigimages img {
-            max-width: 100%;
-            height: auto;
-            float: none;
-            display: block;
-            margin: 0 auto 20px auto;
-}
+            width: 300px;
+            float: left;
+            margin-right: 20px;
+        }
 
         #planetinfo {
             overflow: hidden;
