--- a/project/project5.html
+++ b/project/project5.html
@@ -1,16 +1,106 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>Main Page</title>
-    
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Andre Clause</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <p>Word</p>
-    <h1>Word</h1>
-    <nav>
-        
-    </nav>
-</body>
+<body class="bg-gray-50 text-gray-800 font-sans">
 
+  <!-- Header -->
+  <header class="flex justify-between items-center p-6 bg-white shadow">
+    <h1 class="text-xl font-bold">Andre Clause</h1>
+    <nav class="space-x-4">
+      <a href="#" class="text-sm text-gray-600 hover:underline">Resume</a>
+      <a href="#" class="text-sm text-gray-600 hover:underline">Other Works</a>
+    </nav>
+  </header>
+
+  <!-- Hero Section -->
+  <section class="text-center py-10 bg-gray-100">
+    <h2 class="text-2xl font-semibold">Subtitle</h2>
+    <button class="mt-4 px-4 py-2 bg-black text-white rounded hover:bg-gray-800">Button</button>
+  </section>
+
+  <!-- About Section -->
+  <section class="max-w-4xl mx-auto p-6 grid grid-cols-1 md:grid-cols-3 gap-4">
+    <div class="md:col-span-1">
+      <h3 class="text-lg font-medium mb-2">About</h3>
+      <p class="text-sm text-gray-600">Summary</p>
+    </div>
+    <div class="md:col-span-2 flex gap-4">
+      <div class="w-1/3">
+        <div class="bg-gray-300 aspect-square rounded"></div>
+      </div>
+      <div>
+        <h4 class="text-xl font-semibold">Heading</h4>
+        <p class="text-sm text-gray-700 mt-2">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac lorem nec nulla luctus cursus. Sed id arcu fermentum, pulvinar velit a, aliquam orci.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Hobbies Section -->
+  <section class="max-w-4xl mx-auto p-6">
+    <h3 class="text-lg font-medium mb-2">Hobbies</h3>
+    <p class="text-sm text-gray-600 mb-4">Summary</p>
+
+    <div class="space-y-4">
+      <!-- Hobby Card -->
+      <div class="flex items-start bg-white shadow rounded p-4">
+        <div class="w-16 h-16 bg-gray-300 rounded mr-4"></div>
+        <div>
+          <h4 class="font-semibold">Title</h4>
+          <p class="text-sm text-gray-700">Short description goes here, along with other relevant details.</p>
+        </div>
+      </div>
+
+      <!-- Repeat Hobby Cards -->
+      <div class="flex items-start bg-white shadow rounded p-4">
+        <div class="w-16 h-16 bg-gray-300 rounded mr-4"></div>
+        <div>
+          <h4 class="font-semibold">Title</h4>
+          <p class="text-sm text-gray-700">Short description goes here, along with other relevant details.</p>
+        </div>
+      </div>
+
+      <div class="flex items-start bg-white shadow rounded p-4">
+        <div class="w-16 h-16 bg-gray-300 rounded mr-4"></div>
+        <div>
+          <h4 class="font-semibold">Title</h4>
+          <p class="text-sm text-gray-700">Short description goes here, along with other relevant details.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-white mt-10 p-6 border-t">
+    <div class="max-w-4xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-6 text-sm text-gray-600">
+      <div>
+        <h5 class="font-semibold mb-2">Links</h5>
+        <ul>
+          <li><a href="#" class="hover:underline">Link 1</a></li>
+          <li><a href="#" class="hover:underline">Link 2</a></li>
+        </ul>
+      </div>
+      <div>
+        <h5 class="font-semibold mb-2">Socials</h5>
+        <ul>
+          <li><a href="#" class="hover:underline">Instagram</a></li>
+          <li><a href="#" class="hover:underline">LinkedIn</a></li>
+        </ul>
+      </div>
+      <div>
+        <h5 class="font-semibold mb-2">Contact</h5>
+        <ul>
+          <li><a href="mailto:email@example.com" class="hover:underline">Email</a></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
+
+</body>
 </html>
