--- a/project/project5.html
+++ b/project/project5.html
@@ -4,99 +4,206 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Andre Clause</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-gray-50 text-gray-800 font-sans">
+  <style>
+    * {
+      box-sizing: border-box;
+    }
 
-  <!-- Header -->
-  <header class="flex justify-between items-center p-6 bg-white shadow">
-    <h1 class="text-xl font-bold">Andre Clause</h1>
-    <nav class="space-x-4">
-      <a href="#" class="text-sm text-gray-600 hover:underline">Resume</a>
-      <a href="#" class="text-sm text-gray-600 hover:underline">Other Works</a>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 2rem;
+      background-color: #fff;
+      border-bottom: 1px solid #ddd;
+    }
+
+    header nav a {
+      margin-left: 1rem;
+      text-decoration: none;
+      color: #555;
+    }
+
+    .hero {
+      text-align: center;
+      padding: 3rem 1rem;
+      background-color: #eee;
+    }
+
+    .hero h2 {
+      margin-bottom: 1rem;
+    }
+
+    .hero button {
+      padding: 0.5rem 1rem;
+      background-color: #000;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+
+    .section {
+      max-width: 1000px;
+      margin: 2rem auto;
+      padding: 1rem;
+    }
+
+    .about {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+    }
+
+    .about-left {
+      flex: 1 1 25%;
+    }
+
+    .about-right {
+      flex: 1 1 70%;
+      display: flex;
+      gap: 1rem;
+    }
+
+    .image-placeholder {
+      width: 150px;
+      height: 150px;
+      background-color: #ccc;
+    }
+
+    .hobbies {
+      margin-top: 2rem;
+    }
+
+    .hobby-card {
+      display: flex;
+      background-color: #fff;
+      padding: 1rem;
+      margin-bottom: 1rem;
+      border: 1px solid #ddd;
+      gap: 1rem;
+    }
+
+    .hobby-card .icon {
+      width: 60px;
+      height: 60px;
+      background-color: #ccc;
+    }
+
+    footer {
+      background-color: #fff;
+      border-top: 1px solid #ddd;
+      padding: 2rem;
+      margin-top: 3rem;
+    }
+
+    .footer-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+      gap: 1rem;
+    }
+
+    .footer-grid h5 {
+      margin-bottom: 0.5rem;
+      font-size: 1rem;
+    }
+
+    .footer-grid ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    .footer-grid li a {
+      text-decoration: none;
+      color: #555;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>Andre Clause</h1>
+    <nav>
+      <a href="#">Resume</a>
+      <a href="#">Other Works</a>
     </nav>
   </header>
 
-  <!-- Hero Section -->
-  <section class="text-center py-10 bg-gray-100">
-    <h2 class="text-2xl font-semibold">Subtitle</h2>
-    <button class="mt-4 px-4 py-2 bg-black text-white rounded hover:bg-gray-800">Button</button>
+  <section class="hero">
+    <h2>Subtitle</h2>
+    <button>Button</button>
   </section>
 
-  <!-- About Section -->
-  <section class="max-w-4xl mx-auto p-6 grid grid-cols-1 md:grid-cols-3 gap-4">
-    <div class="md:col-span-1">
-      <h3 class="text-lg font-medium mb-2">About</h3>
-      <p class="text-sm text-gray-600">Summary</p>
+  <section class="section about">
+    <div class="about-left">
+      <h3>About</h3>
+      <p>Summary</p>
     </div>
-    <div class="md:col-span-2 flex gap-4">
-      <div class="w-1/3">
-        <div class="bg-gray-300 aspect-square rounded"></div>
-      </div>
+    <div class="about-right">
+      <div class="image-placeholder"></div>
       <div>
-        <h4 class="text-xl font-semibold">Heading</h4>
-        <p class="text-sm text-gray-700 mt-2">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac lorem nec nulla luctus cursus. Sed id arcu fermentum, pulvinar velit a, aliquam orci.
-        </p>
+        <h4>Heading</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac lorem nec nulla luctus cursus. Sed id arcu fermentum, pulvinar velit a, aliquam orci.</p>
       </div>
     </div>
   </section>
 
-  <!-- Hobbies Section -->
-  <section class="max-w-4xl mx-auto p-6">
-    <h3 class="text-lg font-medium mb-2">Hobbies</h3>
-    <p class="text-sm text-gray-600 mb-4">Summary</p>
+  <section class="section hobbies">
+    <h3>Hobbies</h3>
+    <p>Summary</p>
 
-    <div class="space-y-4">
-      <!-- Hobby Card -->
-      <div class="flex items-start bg-white shadow rounded p-4">
-        <div class="w-16 h-16 bg-gray-300 rounded mr-4"></div>
-        <div>
-          <h4 class="font-semibold">Title</h4>
-          <p class="text-sm text-gray-700">Short description goes here, along with other relevant details.</p>
-        </div>
-      </div>
-
-      <!-- Repeat Hobby Cards -->
-      <div class="flex items-start bg-white shadow rounded p-4">
-        <div class="w-16 h-16 bg-gray-300 rounded mr-4"></div>
-        <div>
-          <h4 class="font-semibold">Title</h4>
-          <p class="text-sm text-gray-700">Short description goes here, along with other relevant details.</p>
-        </div>
-      </div>
-
-      <div class="flex items-start bg-white shadow rounded p-4">
-        <div class="w-16 h-16 bg-gray-300 rounded mr-4"></div>
-        <div>
-          <h4 class="font-semibold">Title</h4>
-          <p class="text-sm text-gray-700">Short description goes here, along with other relevant details.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer class="bg-white mt-10 p-6 border-t">
-    <div class="max-w-4xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-6 text-sm text-gray-600">
+    <div class="hobby-card">
+      <div class="icon"></div>
       <div>
-        <h5 class="font-semibold mb-2">Links</h5>
+        <h4>Title</h4>
+        <p>Short description goes here, along with other relevant details.</p>
+      </div>
+    </div>
+
+    <div class="hobby-card">
+      <div class="icon"></div>
+      <div>
+        <h4>Title</h4>
+        <p>Short description goes here, along with other relevant details.</p>
+      </div>
+    </div>
+
+    <div class="hobby-card">
+      <div class="icon"></div>
+      <div>
+        <h4>Title</h4>
+        <p>Short description goes here, along with other relevant details.</p>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <div class="footer-grid">
+      <div>
+        <h5>Links</h5>
         <ul>
-          <li><a href="#" class="hover:underline">Link 1</a></li>
-          <li><a href="#" class="hover:underline">Link 2</a></li>
+          <li><a href="#">Link 1</a></li>
+          <li><a href="#">Link 2</a></li>
         </ul>
       </div>
       <div>
-        <h5 class="font-semibold mb-2">Socials</h5>
+        <h5>Socials</h5>
         <ul>
-          <li><a href="#" class="hover:underline">Instagram</a></li>
-          <li><a href="#" class="hover:underline">LinkedIn</a></li>
+          <li><a href="#">Instagram</a></li>
+          <li><a href="#">LinkedIn</a></li>
         </ul>
       </div>
       <div>
-        <h5 class="font-semibold mb-2">Contact</h5>
+        <h5>Contact</h5>
         <ul>
-          <li><a href="mailto:email@example.com" class="hover:underline">Email</a></li>
+          <li><a href="mailto:email@example.com">Email</a></li>
         </ul>
       </div>
     </div>
@@ -104,3 +211,4 @@
 
 </body>
 </html>
+
