--- a/project/project5.html
+++ b/project/project5.html
@@ -4,127 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Andre Clause</title>
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background-color: #f9f9f9;
-      color: #333;
-    }
-
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 1rem 2rem;
-      background-color: #fff;
-      border-bottom: 1px solid #ddd;
-    }
-
-    header nav a {
-      margin-left: 1rem;
-      text-decoration: none;
-      color: #555;
-    }
-
-    .hero {
-      text-align: center;
-      padding: 3rem 1rem;
-      background-color: #eee;
-    }
-
-    .hero h2 {
-      margin-bottom: 1rem;
-    }
-
-    .hero button {
-      padding: 0.5rem 1rem;
-      background-color: #000;
-      color: white;
-      border: none;
-      cursor: pointer;
-    }
-
-    .section {
-      max-width: 1000px;
-      margin: 2rem auto;
-      padding: 1rem;
-    }
-
-    .about {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1rem;
-    }
-
-    .about-left {
-      flex: 1 1 25%;
-    }
-
-    .about-right {
-      flex: 1 1 70%;
-      display: flex;
-      gap: 1rem;
-    }
-
-    .image-placeholder {
-      width: 150px;
-      height: 150px;
-      background-color: #ccc;
-    }
-
-    .hobbies {
-      margin-top: 2rem;
-    }
-
-    .hobby-card {
-      display: flex;
-      background-color: #fff;
-      padding: 1rem;
-      margin-bottom: 1rem;
-      border: 1px solid #ddd;
-      gap: 1rem;
-    }
-
-    .hobby-card .icon {
-      width: 60px;
-      height: 60px;
-      background-color: #ccc;
-    }
-
-    footer {
-      background-color: #fff;
-      border-top: 1px solid #ddd;
-      padding: 2rem;
-      margin-top: 3rem;
-    }
-
-    .footer-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-      gap: 1rem;
-    }
-
-    .footer-grid h5 {
-      margin-bottom: 0.5rem;
-      font-size: 1rem;
-    }
-
-    .footer-grid ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-
-    .footer-grid li a {
-      text-decoration: none;
-      color: #555;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
@@ -211,4 +91,3 @@
 
 </body>
 </html>
-
