--- a/project/project5.html
+++ b/project/project5.html
@@ -9,7 +9,6 @@
 <body>
 
   <header>
-    <h1>Andre Clause</h1>
     <nav>
       <a href="#">Resume</a>
       <a href="#">Other Works</a>
@@ -17,7 +16,7 @@
   </header>
 
   <section class="hero">
-    <h2>Subtitle</h2>
+    <h2>André C. Clause</h2>
     <button>Button</button>
   </section>
 
@@ -76,14 +75,14 @@
       <div>
         <h5>Socials</h5>
         <ul>
-          <li><a href="#">Instagram</a></li>
-          <li><a href="#">LinkedIn</a></li>
+          <li><a href="https://www.instagram.com/andreclause/">Instagram</a></li>
+          <li><a href="https://www.linkedin.com/in/andreclause1">LinkedIn</a></li>
         </ul>
       </div>
       <div>
         <h5>Contact</h5>
         <ul>
-          <li><a href="mailto:email@example.com">Email</a></li>
+          <li><a href="mailto:acclause@syr.edu">Email</a></li>
         </ul>
       </div>
     </div>
