--- a/project/project5.html
+++ b/project/project5.html
@@ -26,10 +26,12 @@
       <p>Summary</p>
     </div>
     <div class="about-right">
-      <div class="image-placeholder"></div>
+      <div class="image-placeholder">
+        <img src="../images/1662734620769.jpeg" alt="Coverphoto" width="100" height="100">
+      </div>
       <div>
         <h4>Heading</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac lorem nec nulla luctus cursus. Sed id arcu fermentum, pulvinar velit a, aliquam orci.</p>
+        <p>I am a Student at Syracuse University studying Finance, Accounting, and Data Analytics. I love traveling, self improvement, and creating various works of art from music to acrylic painting. </p>
       </div>
     </div>
   </section>
@@ -41,37 +43,30 @@
     <div class="hobby-card">
       <div class="icon"></div>
       <div>
-        <h4>Title</h4>
-        <p>Short description goes here, along with other relevant details.</p>
+        <h4>Lacrosse</h4>
+        <p>I have been playing lacrosse for over 10 years and currently play for Tuscarora Jr. B Box lacrosse and Syracuse's Club Lacrossse Team</p>
       </div>
     </div>
 
     <div class="hobby-card">
       <div class="icon"></div>
       <div>
-        <h4>Title</h4>
-        <p>Short description goes here, along with other relevant details.</p>
+        <h4>Photography</h4>
+        <p>Photography is one of my many artistic passions that I have persued since elementary school when I started my first photography social media account.</p>
       </div>
     </div>
 
     <div class="hobby-card">
       <div class="icon"></div>
       <div>
-        <h4>Title</h4>
-        <p>Short description goes here, along with other relevant details.</p>
+        <h4>Lifting</h4>
+        <p>I am an avid power builder - My maxes on the main three are as follows - Bench 405, Squat 505, Deadlift 600</p>
       </div>
     </div>
   </section>
 
   <footer>
     <div class="footer-grid">
-      <div>
-        <h5>Links</h5>
-        <ul>
-          <li><a href="#">Link 1</a></li>
-          <li><a href="#">Link 2</a></li>
-        </ul>
-      </div>
       <div>
         <h5>Socials</h5>
         <ul>
