--- a/project/project5.html
+++ b/project/project5.html
@@ -28,7 +28,7 @@
         <img src="../images/1662734620769.jpeg" alt="Coverphoto" width="100" height="100">
       </div>
       <div>
-        <h3>Heading</h3>
+        <h3>Background</h3>
         <p>I am a Student at Syracuse University studying Finance, Accounting, and Data Analytics. I love traveling, self improvement, and creating various works of art from music to acrylic painting. </p>
       </div>
     </div>
