--- a/week13/participation.html
+++ b/week13/participation.html
@@ -73,7 +73,7 @@
   <body>
     
     <label for="name">What Do you See? </label>
-    <input type="text" id="name" name="name" />
+    <input type="text" id="name" name="name" alt="textbox for analyzing friend or foe"/>
     <button onclick="determineFriendOrFoe()">Friend or Foe?</button>
     <br />
     <h1 id="response"></h1>
@@ -83,7 +83,7 @@
     <h2 id="cuse-weather"></h2>
     <div>
       <img id="icon" src="" />
-      <p id="time"></p>
+      <p id="time"alt></p>
       <p id="temp"></p>
       <p id="forecast"></p>
     </div>
