--- a/project/project5b.html
+++ b/project/project5b.html
@@ -3,69 +3,35 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Andre Clause</title>
+  <title>Resume | Andre Clause</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-
   <header>
     <nav>
-      <a href="project5b.html">Resume</a>
+      <a href="project5.html">Home</a>
       <a href="project5c.html">Photography</a>
     </nav>
   </header>
 
-  <section class="hero">
-    <h1>André C. Clause</h1>
-  </section>
+  <section class="section">
+    <h1>Resume</h1>
+    <h2>Education</h2>
+    <ul>
+      <li>Syracuse University – B.S. Finance, Accounting, and Data Analytics (Expected 2026)</li>
+    </ul>
 
-  <section class="section about">
-    <div class="about-left">
-      <h2>About</h2>
-    </div>
-    <div class="about-right">
-      <div class="image-placeholder">
-        <img src="../images/1662734620769.jpeg" alt="Coverphoto" width="100" height="100">
-      </div>
-      <div>
-        <h3>Background</h3>
-        <p>I am a Student at Syracuse University studying Finance, Accounting, and Data Analytics. I love traveling, self improvement, and creating various works of art from music to acrylic painting. </p>
-      </div>
-    </div>
-  </section>
+    <h2>Experience</h2>
+    <ul>
+      <li><strong>Intern – XYZ Finance Firm</strong><br>Summer 2024 – Assisted with financial analysis and reporting</li>
+      <li><strong>Student Consultant – Whitman School Projects</strong><br>2023–2024 – Led teams in solving real business problems</li>
+    </ul>
 
-  <section class="section hobbies">
-    <h2>Hobbies</h2>
-
-    <div class="hobby-card">
-      <div class="icon">
-        <img src="../images/IMG_0308.jpeg" alt="lacrossephoto" width="100" height="100">
-      </div>
-      <div>
-        <h3>Lacrosse</h3>
-        <p>I have been playing lacrosse for over 10 years and currently play for Tuscarora Jr. B Box lacrosse and Syracuse's Club Lacrossse Team</p>
-      </div>
-    </div>
-
-    <div class="hobby-card">
-      <div class="icon">
-        <img src="../images/222B5462-1ED6-4688-8EAC-FA43A12C7752.JPG" alt="skyphoto" width="100" height="100">
-      </div>
-      <div>
-        <h3>Photography</h3>
-        <p>Photography is one of my many artistic passions that I have persued since elementary school when I started my first photography social media account.</p>
-      </div>
-    </div>
-
-    <div class="hobby-card">
-      <div class="icon">
-        <img src="../images/EB3FADDB-CEA2-47E2-B2D1-375343ADF798.jpg" alt="liftingphoto" width="100" height="100">
-    </div>
-      <div>
-        <h3>Lifting</h3>
-        <p>I am an avid power builder - My maxes on the main three are as follows - Bench 405, Squat 505, Deadlift 600</p>
-      </div>
-    </div>
+    <h2>Skills</h2>
+    <ul>
+      <li>Excel, Power BI, Python, SQL</li>
+      <li>Financial modeling, data visualization, accounting principles</li>
+    </ul>
   </section>
 
   <footer>
@@ -73,7 +39,6 @@
       <div>
         <h5>Socials</h5>
         <ul>
-          <li><a href="https://www.instagram.com/andreclause/">Instagram</a></li>
           <li><a href="https://www.linkedin.com/in/andreclause1">LinkedIn</a></li>
         </ul>
       </div>
@@ -85,6 +50,5 @@
       </div>
     </div>
   </footer>
-
 </body>
 </html>
