--- a/project/project5b.html
+++ b/project/project5b.html
@@ -23,7 +23,7 @@
 
     <h2>Experience</h2>
     <ul>
-      <li><strong>Intern – XYZ Finance Firm</strong><br>Summer 2024 – Assisted with financial analysis and reporting</li>
+      <li><strong>Intern  XYZ Finance Firm</strong><br>Summer 2024 – Assisted with financial analysis and reporting</li>
       <li><strong>Student Consultant – Whitman School Projects</strong><br>2023–2024 – Led teams in solving real business problems</li>
     </ul>
 
