--- a/project/project5c.html
+++ b/project/project5c.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+
   <header>
     <nav>
       <a href="project5.html">Home</a>
@@ -16,12 +17,48 @@
 
   <section class="section">
     <h1>Photography</h1>
-    <p>Here are a few of my favorite photos I've taken over the years.</p>
+    <p>Click through each set to explore different aspects of my photography work.</p>
 
-    <div class="photo-gallery">
-      <img src="../images/photo1.jpg" alt="Sunset over lake">
-      <img src="../images/photo2.jpg" alt="Urban architecture">
-      <img src="../images/photo3.jpg" alt="Portrait in nature">
+    <div class="photo-grid">
+      <div class="photo-card top-left">
+        <div class="carousel">
+          <img src="../images/photo1a.jpg" alt="Urban 1" />
+          <img src="../images/photo1b.jpg" alt="Urban 2" />
+          <img src="../images/photo1c.jpg" alt="Urban 3" />
+          <img src="../images/photo1d.jpg" alt="Urban 4" />
+        </div>
+        <div class="overlay-text">Urban Exploration</div>
+      </div>
+
+      <div class="photo-card top-right">
+        <div class="carousel">
+          <img src="../images/photo2a.jpg" alt="Nature 1" />
+          <img src="../images/photo2b.jpg" alt="Nature 2" />
+          <img src="../images/photo2c.jpg" alt="Nature 3" />
+          <img src="../images/photo2d.jpg" alt="Nature 4" />
+        </div>
+        <div class="overlay-text">Nature Escape</div>
+      </div>
+
+      <div class="photo-card bottom-left">
+        <div class="carousel">
+          <img src="../images/photo3a.jpg" alt="Portrait 1" />
+          <img src="../images/photo3b.jpg" alt="Portrait 2" />
+          <img src="../images/photo3c.jpg" alt="Portrait 3" />
+          <img src="../images/photo3d.jpg" alt="Portrait 4" />
+        </div>
+        <div class="overlay-text">Portraits</div>
+      </div>
+
+      <div class="photo-card bottom-right">
+        <div class="carousel">
+          <img src="../images/photo4a.jpg" alt="City 1" />
+          <img src="../images/photo4b.jpg" alt="City 2" />
+          <img src="../images/photo4c.jpg" alt="City 3" />
+          <img src="../images/photo4d.jpg" alt="City 4" />
+        </div>
+        <div class="overlay-text">City at Night</div>
+      </div>
     </div>
   </section>
 
@@ -41,5 +78,7 @@
       </div>
     </div>
   </footer>
+
 </body>
 </html>
+
