--- a/project/project5c.html
+++ b/project/project5c.html
@@ -20,44 +20,68 @@
     <p>Click through each set to explore different aspects of my photography work.</p>
 
     <div class="photo-grid">
+      <!-- California Set -->
       <div class="photo-card top-left">
         <div class="carousel">
-          <img src="../images/photo1a.jpg" alt="Urban 1" />
-          <img src="../images/photo1b.jpg" alt="Urban 2" />
-          <img src="../images/photo1c.jpg" alt="Urban 3" />
-          <img src="../images/photo1d.jpg" alt="Urban 4" />
+          <img src="../images/projectphotos/california1.jpg" alt="California 1" />
+          <img src="../images/projectphotos/california2.jpg" alt="California 2" />
+          <img src="../images/projectphotos/california3.jpg" alt="California 3" />
+          <img src="../images/projectphotos/california4.jpg" alt="California 4" />
         </div>
-        <div class="overlay-text">Urban Exploration</div>
+        <div class="overlay-text">California Adventures</div>
       </div>
 
+      <!-- Nature Set -->
       <div class="photo-card top-right">
         <div class="carousel">
-          <img src="../images/photo2a.jpg" alt="Nature 1" />
-          <img src="../images/photo2b.jpg" alt="Nature 2" />
-          <img src="../images/photo2c.jpg" alt="Nature 3" />
-          <img src="../images/photo2d.jpg" alt="Nature 4" />
+          <img src="../images/projectphotos/nature.jpeg" alt="Nature 1" />
+          <img src="../images/projectphotos/nature2.jpeg" alt="Nature 2" />
+          <img src="../images/projectphotos/nature3.jpeg" alt="Nature 3" />
+          <img src="../images/projectphotos/nature4.jpeg" alt="Nature 4" />
         </div>
         <div class="overlay-text">Nature Escape</div>
       </div>
 
+      <!-- Of Friends Set -->
       <div class="photo-card bottom-left">
         <div class="carousel">
-          <img src="../images/photo3a.jpg" alt="Portrait 1" />
-          <img src="../images/photo3b.jpg" alt="Portrait 2" />
-          <img src="../images/photo3c.jpg" alt="Portrait 3" />
-          <img src="../images/photo3d.jpg" alt="Portrait 4" />
+          <img src="../images/projectphotos/offriends1.jpg" alt="Friends 1" />
+          <img src="../images/projectphotos/offriends2.jpg" alt="Friends 2" />
+          <img src="../images/projectphotos/offriends3.jpg" alt="Friends 3" />
+          <img src="../images/projectphotos/offriends4.jpg" alt="Friends 4" />
         </div>
-        <div class="overlay-text">Portraits</div>
+        <div class="overlay-text">With Friends</div>
       </div>
 
+      <!-- Of Me Set -->
       <div class="photo-card bottom-right">
         <div class="carousel">
-          <img src="../images/photo4a.jpg" alt="City 1" />
-          <img src="../images/photo4b.jpg" alt="City 2" />
-          <img src="../images/photo4c.jpg" alt="City 3" />
-          <img src="../images/photo4d.jpg" alt="City 4" />
+          <img src="../images/projectphotos/ofme1.jpeg" alt="Me 1" />
+          <img src="../images/projectphotos/ofme2.jpg" alt="Me 2" />
+          <img src="../images/projectphotos/ofme3.jpg" alt="Me 3" />
+          <img src="../images/projectphotos/ofme4.jpg" alt="Me 4" />
         </div>
-        <div class="overlay-text">City at Night</div>
+        <div class="overlay-text">Captured Moments</div>
+      </div>
+      <div class="photo-card bottom-left">
+        <div class="overlay-text">Silvercreek</div>
+        <div class="carousel">
+          <img src="../images/projectphotos/silvercreek1.jpg" alt="Silvercreek 1">
+          <img src="../images/projectphotos/silvercreek2.jpg" alt="Silvercreek 2">
+          <img src="../images/projectphotos/silvercreek3.jpg" alt="Silvercreek 3">
+          <img src="../images/projectphotos/silvercreek4.jpg" alt="Silvercreek 4">
+        </div>
+      </div>
+      
+      <!-- Montreal Carousel -->
+      <div class="photo-card bottom-right">
+        <div class="overlay-text">Montreal</div>
+        <div class="carousel">
+          <img src="../images/projectphotos/montreal1.jpg" alt="Montreal 1">
+          <img src="../images/projectphotos/montreal2.jpg" alt="Montreal 2">
+          <img src="../images/projectphotos/montreal3.jpg" alt="Montreal 3">
+          <img src="../images/projectphotos/montreal4.jpg" alt="Montreal 4">
+        </div>
       </div>
     </div>
   </section>
@@ -81,4 +105,5 @@
 
 </body>
 </html>
+
 
