--- a/project/project5b.html
+++ b/project/project5b.html
@@ -1,54 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Resume | Andre Clause</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Resume - Project B</title>
+  <link rel="stylesheet" href="../styles/style.css">
 </head>
+
 <body>
   <header>
+    <h1>My Resume</h1>
     <nav>
       <a href="project5.html">Home</a>
       <a href="project5c.html">Photography</a>
     </nav>
   </header>
 
-  <section class="section">
-    <h1>Resume</h1>
-    <h2>Education</h2>
-    <ul>
-      <li>Syracuse University – B.S. Finance, Accounting, and Data Analytics (Expected 2026)</li>
-    </ul>
+  <main class="section">
+    <section class="resume-section">
+      <h2>Education</h2>
+      <p><strong>Syracuse University</strong> - Syracuse, NY<br>
+        Bachelor of Data Analytics and Accounting | CPA Track | May 2026<br>
+        <em>Relevant Coursework:</em> Introduction to Financial Accounting, Introduction to the Legal System, Perspectives of Business Management
+      </p>
 
-    <h2>Experience</h2>
-    <ul>
-      <li><strong>Intern  XYZ Finance Firm</strong><br>Summer 2024 – Assisted with financial analysis and reporting</li>
-      <li><strong>Student Consultant – Whitman School Projects</strong><br>2023–2024 – Led teams in solving real business problems</li>
-    </ul>
+      <h2>Work Experience</h2>
+      <p><strong>Haudenosaunee Environmental Task Force</strong> - Niagara Falls, NY<br>
+        Intern | August 2021 – October 2022
+      </p>
+      <ul>
+        <li>Managed food prep, orders, and cashier duties in fast-paced environment.</li>
+        <li>Maintained a clean workspace contributing to food safety and teamwork.</li>
+      </ul>
 
-    <h2>Skills</h2>
-    <ul>
-      <li>Excel, Power BI, Python, SQL</li>
-      <li>Financial modeling, data visualization, accounting principles</li>
-    </ul>
-  </section>
+      <p><strong>Syracuse University - Information School</strong> - Niagara Falls, NY<br>
+        Teaching Assistant | August 2021 – October 2022
+      </p>
+      <ul>
+        <li>Handled food service roles similar to prior internship for seamless operations.</li>
+        <li>Helped foster a productive and hygienic work environment.</li>
+      </ul>
+
+      <h2>Leadership & Activities</h2>
+      <p><strong>Niagara Wheatfield Wrestling</strong> - Sanborn, NY<br>
+        Team Captain | October 2018 - March 2022
+      </p>
+      <ul>
+        <li>Led team to two state title appearances, inspiring unity and performance.</li>
+        <li>Mentored younger athletes to build confidence and skill.</li>
+      </ul>
+
+      <p><strong>Niagara Wheatfield DECA Chapter</strong> - Sanborn, NY<br>
+        President | September 2019 – March 2022
+      </p>
+      <ul>
+        <li>Launched new training and mentorship programs for members.</li>
+        <li>Boosted state and national level competition success rates.</li>
+      </ul>
+
+      <h2>Skills</h2>
+      <ul>
+        <li>RStudio, Microsoft Excel (Proficient)</li>
+        <li>C++, Python, HTML, JavaScript</li>
+        <li>Tableau, Power BI</li>
+      </ul>
+    </section>
+  </main>
 
   <footer>
     <div class="footer-grid">
       <div>
-        <h5>Socials</h5>
+        <h5>Navigation</h5>
         <ul>
-          <li><a href="https://www.linkedin.com/in/andreclause1">LinkedIn</a></li>
-        </ul>
-      </div>
-      <div>
-        <h5>Contact</h5>
-        <ul>
-          <li><a href="mailto:acclause@syr.edu">Email</a></li>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../about.html">About</a></li>
+          <li><a href="../photography.html">Photography</a></li>
+          <li><a href="../resume.html">Resume</a></li>
         </ul>
       </div>
     </div>
   </footer>
 </body>
+
 </html>
