--- a/project/project5c.html
+++ b/project/project5c.html
@@ -10,7 +10,7 @@
   <header>
     <nav>
       <a href="project5.html">Home</a>
-      <a href="projcet5b.html">Resume</a>
+      <a href="project5b.html">Resume</a>
     </nav>
   </header>
 
