--- a/project/project5.html
+++ b/project/project5.html
@@ -2,59 +2,70 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Resume - Andre Clause</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Andre Clause</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+
   <header>
     <nav>
-      <a href="project5b.html">Resume</a>       
+      <a href="project5b.html">Resume</a>
       <a href="project5c.html">Photography</a>
     </nav>
   </header>
 
   <section class="hero">
-    <h1>Resume</h1>
+    <h1>André C. Clause</h1>
   </section>
 
-  <section class="section">
-    <h2>Education</h2>
-    <p><strong>Syracuse University</strong> – Syracuse, NY<br>
-    Bachelor of Data Analytics and Accounting | CPA Track<br>
-    Expected May 2026<br>
-    Relevant Coursework: Introduction to Financial Accounting, Introduction to the Legal System, Perspectives of Business Management</p>
+  <section class="section about">
+    <div class="about-left">
+      <h2>About</h2>
+    </div>
+    <div class="about-right">
+      <div class="image-placeholder">
+        <img src="../images/1662734620769.jpeg" alt="Coverphoto" width="100" height="100">
+      </div>
+      <div>
+        <h3>Background</h3>
+        <p>I am a Student at Syracuse University studying Finance, Accounting, and Data Analytics. I love traveling, self improvement, and creating various works of art from music to acrylic painting. </p>
+      </div>
+    </div>
   </section>
 
-  <section class="section">
-    <h2>Work Experience</h2>
-    <p><strong>Haudenosaunee Environmental Task Force</strong> – Niagara Falls, NY<br>
-    Intern | August 2021 – October 2022<br>
-    • Developed excellent multitasking abilities by efficiently managing food preparation, order taking, and cashier responsibilities in a fast-paced environment, resulting in reduced wait times and increased customer flow.<br>
-    • Collaborated effectively with team members to ensure smooth operations and maintain a clean and organized workspace, contributing to a positive work environment and high standards of food safety and hygiene.</p>
+  <section class="section hobbies">
+    <h2>Hobbies</h2>
 
-    <p><strong>Syracuse University - Information School</strong> – Syracuse, NY<br>
-    Teaching Assistant | August 2021 – October 2022<br>
-    • Provided instructional support to students and collaborated with faculty to enhance learning outcomes.<br>
-    • Assisted with grading and classroom management, helping streamline administrative processes.</p>
-  </section>
+    <div class="hobby-card">
+      <div class="icon">
+        <img src="../images/IMG_0308.jpeg" alt="lacrossephoto" width="100" height="100">
+      </div>
+      <div>
+        <h3>Lacrosse</h3>
+        <p>I have been playing lacrosse for over 10 years and currently play for Tuscarora Jr. B Box lacrosse and Syracuse's Club Lacrossse Team</p>
+      </div>
+    </div>
 
-  <section class="section">
-    <h2>Leadership Experience & Activities</h2>
-    <p><strong>Niagara Wheatfield Wrestling</strong> – Sanborn, NY<br>
-    Team Captain | October 2018 – March 2022<br>
-    • Led the team to two consecutive team state title representations.<br>
-    • Mentored younger wrestlers and cultivated a legacy of excellence.</p>
+    <div class="hobby-card">
+      <div class="icon">
+        <img src="../images/222B5462-1ED6-4688-8EAC-FA43A12C7752.JPG" alt="skyphoto" width="100" height="100">
+      </div>
+      <div>
+        <h3>Photography</h3>
+        <p>Photography is one of my many artistic passions that I have persued since elementary school when I started my first photography social media account.</p>
+      </div>
+    </div>
 
-    <p><strong>Niagara Wheatfield DECA Chapter</strong> – Sanborn, NY<br>
-    President | September 2019 – March 2022<br>
-    • Implemented training programs and mentorship opportunities.<br>
-    • Led members to increased success in state and national DECA competitions.</p>
-  </section>
-
-  <section class="section">
-    <h2>Skills</h2>
-    <p><strong>Computer:</strong> RStudio, Microsoft Office (Excel Proficient), C++, Python, HTML, JavaScript, Tableau, Power BI</p>
+    <div class="hobby-card">
+      <div class="icon">
+        <img src="../images/EB3FADDB-CEA2-47E2-B2D1-375343ADF798.jpg" alt="liftingphoto" width="100" height="100">
+    </div>
+      <div>
+        <h3>Lifting</h3>
+        <p>I am an avid power builder - My maxes on the main three are as follows - Bench 405, Squat 505, Deadlift 600</p>
+      </div>
+    </div>
   </section>
 
   <footer>
@@ -74,5 +85,6 @@
       </div>
     </div>
   </footer>
+
 </body>
 </html>
