--- a/project/project5b.html
+++ b/project/project5b.html
@@ -1,86 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Resume - Project B</title>
-  <link rel="stylesheet" href="../styles/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Resume - Andre Clause</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
-
 <body>
   <header>
-    <h1>My Resume</h1>
     <nav>
       <a href="project5.html">Home</a>
       <a href="project5c.html">Photography</a>
     </nav>
   </header>
 
-  <main class="section">
-    <section class="resume-section">
-      <h2>Education</h2>
-      <p><strong>Syracuse University</strong> - Syracuse, NY<br>
-        Bachelor of Data Analytics and Accounting | CPA Track | May 2026<br>
-        <em>Relevant Coursework:</em> Introduction to Financial Accounting, Introduction to the Legal System, Perspectives of Business Management
-      </p>
+  <section class="hero">
+    <h1>Resume</h1>
+  </section>
 
-      <h2>Work Experience</h2>
-      <p><strong>Haudenosaunee Environmental Task Force</strong> - Niagara Falls, NY<br>
-        Intern | August 2021 – October 2022
-      </p>
-      <ul>
-        <li>Managed food prep, orders, and cashier duties in fast-paced environment.</li>
-        <li>Maintained a clean workspace contributing to food safety and teamwork.</li>
-      </ul>
+  <section class="section">
+    <h2>Education</h2>
+    <p><strong>Syracuse University</strong> – Syracuse, NY<br>
+    Bachelor of Data Analytics and Accounting | CPA Track<br>
+    Expected May 2026<br>
+    Relevant Coursework: Introduction to Financial Accounting, Introduction to the Legal System, Perspectives of Business Management</p>
+  </section>
 
-      <p><strong>Syracuse University - Information School</strong> - Niagara Falls, NY<br>
-        Teaching Assistant | August 2021 – October 2022
-      </p>
-      <ul>
-        <li>Handled food service roles similar to prior internship for seamless operations.</li>
-        <li>Helped foster a productive and hygienic work environment.</li>
-      </ul>
+  <section class="section">
+    <h2>Work Experience</h2>
+    <p><strong>Haudenosaunee Environmental Task Force</strong> – Niagara Falls, NY<br>
+    Intern | August 2021 – October 2022<br>
+    • Developed excellent multitasking abilities by efficiently managing food preparation, order taking, and cashier responsibilities in a fast-paced environment, resulting in reduced wait times and increased customer flow.<br>
+    • Collaborated effectively with team members to ensure smooth operations and maintain a clean and organized workspace, contributing to a positive work environment and high standards of food safety and hygiene.</p>
 
-      <h2>Leadership & Activities</h2>
-      <p><strong>Niagara Wheatfield Wrestling</strong> - Sanborn, NY<br>
-        Team Captain | October 2018 - March 2022
-      </p>
-      <ul>
-        <li>Led team to two state title appearances, inspiring unity and performance.</li>
-        <li>Mentored younger athletes to build confidence and skill.</li>
-      </ul>
+    <p><strong>Syracuse University - Information School</strong> – Syracuse, NY<br>
+    Teaching Assistant | August 2021 – October 2022<br>
+    • Provided instructional support to students and collaborated with faculty to enhance learning outcomes.<br>
+    • Assisted with grading and classroom management, helping streamline administrative processes.</p>
+  </section>
 
-      <p><strong>Niagara Wheatfield DECA Chapter</strong> - Sanborn, NY<br>
-        President | September 2019 – March 2022
-      </p>
-      <ul>
-        <li>Launched new training and mentorship programs for members.</li>
-        <li>Boosted state and national level competition success rates.</li>
-      </ul>
+  <section class="section">
+    <h2>Leadership Experience & Activities</h2>
+    <p><strong>Niagara Wheatfield Wrestling</strong> – Sanborn, NY<br>
+    Team Captain | October 2018 – March 2022<br>
+    • Led the team to two consecutive team state title representations.<br>
+    • Mentored younger wrestlers and cultivated a legacy of excellence.</p>
 
-      <h2>Skills</h2>
-      <ul>
-        <li>RStudio, Microsoft Excel (Proficient)</li>
-        <li>C++, Python, HTML, JavaScript</li>
-        <li>Tableau, Power BI</li>
-      </ul>
-    </section>
-  </main>
+    <p><strong>Niagara Wheatfield DECA Chapter</strong> – Sanborn, NY<br>
+    President | September 2019 – March 2022<br>
+    • Implemented training programs and mentorship opportunities.<br>
+    • Led members to increased success in state and national DECA competitions.</p>
+  </section>
+
+  <section class="section">
+    <h2>Skills</h2>
+    <p><strong>Computer:</strong> RStudio, Microsoft Office (Excel Proficient), C++, Python, HTML, JavaScript, Tableau, Power BI</p>
+  </section>
 
   <footer>
     <div class="footer-grid">
       <div>
-        <h5>Navigation</h5>
+        <h5>Socials</h5>
         <ul>
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="../about.html">About</a></li>
-          <li><a href="../photography.html">Photography</a></li>
-          <li><a href="../resume.html">Resume</a></li>
+          <li><a href="https://www.instagram.com/andreclause/">Instagram</a></li>
+          <li><a href="https://www.linkedin.com/in/andreclause1">LinkedIn</a></li>
+        </ul>
+      </div>
+      <div>
+        <h5>Contact</h5>
+        <ul>
+          <li><a href="mailto:acclause@syr.edu">Email</a></li>
         </ul>
       </div>
     </div>
   </footer>
 </body>
-
 </html>
+
