--- a/EEE457/Mainpage.html
+++ b/EEE457/Mainpage.html
@@ -115,7 +115,10 @@
     <p>I want to learn...</p>
     <div class="flags">
       <img src="https://flagcdn.com/us.svg" alt="English">
-      <img src="https://flagcdn.com/es.svg" alt="Spanish">
+      <div>
+        <img src="https://flagcdn.com/es.svg" alt="Spanish">
+        <a href="spanish.html"> </a> 
+      </div>
       <img src="https://flagcdn.com/fr.svg" alt="French">
       <img src="https://flagcdn.com/cn.svg" alt="Chinese">
       <img src="https://flagcdn.com/un.svg" alt="Other">
