--- a/EEE457/spanish.html
+++ b/EEE457/spanish.html
@@ -83,7 +83,7 @@
 </head>
 <body>
   <header>
-    <button class="btn-back" onclick="window.location.href='index.html'">← Back</button>
+    <button class="btn-back" onclick="window.location.href='Mainpage.html'">← Back</button>
     <div class="logo">orla</div>
   </header>
 
